# EcoPower-Control-Center

./: .gitignore  CMakeLists.txt  ECOPower-v2.3-LFN-FIX.txt  README.md  README_ECOPOWER_OS_V3.md  README_ECOPOWER_OS_V3_1_RS485.md  README_ECOPOWER_OS_V3_2_UI_DIAGNOSTICS.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/: lv_conf.h
components/lvgl__lvgl/: lv_conf_template.h
components/lvgl__lvgl/src/: lv_conf_internal.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/app/: app_version.h
main/core/: daily_energy.cpp  daily_energy.h  energy_history.cpp  energy_history.h  energy_model.cpp  energy_model.h  inverter_manager.cpp  inverter_manager.h  inverter_types.h  storage_manager.cpp  storage_manager.h
main/deye/: deye_config.h  deye_driver.cpp  deye_driver.h  deye_register_scanner.cpp  deye_register_scanner.h
main/drivers/: deye_rs485.cpp  deye_rs485.h  ha_discovery.cpp  ha_discovery.h  modbus_rtu_master.cpp  modbus_rtu_master.h  mqtt_manager.cpp  mqtt_manager.h  rs485_port.cpp  rs485_port.h  sd_card.cpp  sd_card.h  time_manager.cpp  time_manager.h  wifi_manager.cpp  wifi_manager.h
main/ui/: assets.cpp  assets.h  dashboard.cpp  dashboard.h  inverter_page.cpp  inverter_page.h  mqtt_page.cpp  mqtt_page.h  network_page.cpp  network_page.h  right_panel.cpp  right_panel.h  settings_page.cpp  settings_page.h  startup.cpp  startup.h  system_page.cpp  system_page.h  theme.h  time_page.cpp  time_page.h  ui.cpp  ui.h
main/ui/widgets/: flow_dot.cpp  flow_dot.h  value_label.cpp  value_label.h
